# src/handler/myDriveHandler.go
@@ -19,7 +19,10 @@ func NewMyDriveHandler(r fiber.Router, uc models.MyDriveUsecase) {
 	products := r.Group("/drives")
 
 	products.Get("", middleware.JWTAuthMiddleware(), handler.MyDrives)
+	products.Get("/:id", middleware.JWTAuthMiddleware(), handler.Get)
 	products.Post("", middleware.JWTAuthMiddleware(), handler.Create)
+	products.Put("/:id", middleware.JWTAuthMiddleware(), handler.Update)
+	products.Delete("/:id", middleware.JWTAuthMiddleware(), handler.Delete)
 }
 
 // MyDrives
@@ -54,12 +57,12 @@ func (h *MyDriveHandler) MyDrives(c *fiber.Ctx) error {
 // @Tags         My Drive
 // @Accept       multipart/form-data
 // @Produce      json
-// @Param 		 file formData file false "File to upload" format(multipart/form-data)
-// @Success      200  {object}  models.MyDrive
+// @Param 		 files formData file false "File to upload" format(multipart/form-data)
+// @Success      200  {object}  []models.MyDrive
 // @Failure      400  {object}  models.ResponseError
 // @Failure      500  {object}  models.ResponseError
 // @Security 	 BearerAuth
-// @Router       /v1/products [post]
+// @Router       /v1/drives [post]
 func (h *MyDriveHandler) Create(c *fiber.Ctx) error {
 	res := models.ResponseHTTP{
 		Code:    fiber.StatusOK,
@@ -74,4 +77,102 @@ func (h *MyDriveHandler) Create(c *fiber.Ctx) error {
 	}
 
 	return c.Status(res.Code).JSON(obj)
+}
+
+// Update
+// @Summary      Rename file
+// @Description  Rename file
+// @Tags         My Drive
+// @Accept       json
+// @Produce      json
+// @Param        id   path      string  true  "ID"
+// @Param 		 body formData models.MyDriveRenameInput true "Body"
+// @Success      200  {object}  models.MyDrive
+// @Failure      404  {object}  models.ResponseError
+// @Failure      422  {object}  models.ResponseHTTP
+// @Failure      500  {object}  models.ResponseError
+// @Security 	 BearerAuth
+// @Router       /v1/drives/{id} [put]
+func (h *MyDriveHandler) Update(c *fiber.Ctx) error {
+	var payload models.MyDriveRenameInput
+	res := models.ResponseHTTP{
+		Code:    fiber.StatusOK,
+		Message: "Request has been processed successfully",
+	}
+
+	if err := c.BodyParser(&payload); err != nil {
+		res.Code = fiber.StatusBadRequest
+		res.Message = err.Error()
+		return c.Status(res.Code).JSON(res)
+	}
+
+	// form POST validation
+	errD := models.ValidateStruct(payload)
+	if errD.Errors != nil {
+		return c.Status(errD.Code).JSON(errD)
+	}
+
+	obj, err := h.uCase.Update(c, payload)
+	if err != nil {
+		res.Code = err.Code
+		res.Message = err.Message
+		return c.Status(res.Code).JSON(res)
+	}
+
+	return c.Status(res.Code).JSON(obj)
+}
+
+// Get
+// @Summary      Get file
+// @Description  Get file
+// @Tags         My Drive
+// @Accept       json
+// @Produce      json
+// @Param        id   path      string  true  "ID"
+// @Success      200  {object}  models.MyDrive
+// @Failure      400  {object}  models.ResponseError
+// @Failure      500  {object}  models.ResponseError
+// @Security 	 BearerAuth
+// @Router       /v1/drives/{id} [get]
+func (h *MyDriveHandler) Get(c *fiber.Ctx) error {
+	res := models.ResponseHTTP{
+		Code:    fiber.StatusOK,
+		Message: "Request has been processed successfully",
+	}
+
+	obj, err := h.uCase.Get(c)
+	if err != nil {
+		res.Code = err.Code
+		res.Message = err.Message
+		return c.Status(res.Code).JSON(res)
+	}
+
+	return c.Status(res.Code).JSON(obj)
+}
+
+// Delete
+// @Summary      Delete file
+// @Description  Delete file
+// @Tags         My Drive
+// @Accept       json
+// @Produce      json
+// @Param        id   path      string  true  "ID"
+// @Success      200  {object}  models.ResponseSuccess
+// @Failure      400  {object}  models.ResponseError
+// @Failure      500  {object}  models.ResponseError
+// @Security 	 BearerAuth
+// @Router       /v1/drives/{id} [delete]
+func (h *MyDriveHandler) Delete(c *fiber.Ctx) error {
+	res := models.ResponseHTTP{
+		Code:    fiber.StatusOK,
+		Message: "Request has been processed successfully",
+	}
+
+	if err := h.uCase.Delete(c); err != nil {
+		res.Code = err.Code
+		res.Message = err.Message
+		return c.Status(res.Code).JSON(res)
+	}
+
+	return c.Status(res.Code).JSON(res)
 }
